src_old/objects/AccountBudget__c.object
<CustomObject>
    <description>AccountBudget</description>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Category</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>AccountCategory__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>AccountCategory__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Retailer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AccountCategory__c</referenceTo>
        <relationshipLabel>Account Budgets</relationshipLabel>
        <relationshipName>AccountBudgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Budgets (Account)</relationshipLabel>
        <relationshipName>Account_Budgets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetType__c</fullName>
        <label>Budget Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi- Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExecutedAgainstBudget__c</fullName>
        <label>Executed Against Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PeriodEndDate__c</fullName>
        <label>Period End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeriodStartDate__c</fullName>
        <label>Period Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedAgainstBudget__c</fullName>
        <label>Planned Against Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Retailer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Budgets (Retailer)</relationshipLabel>
        <relationshipName>AccountBudgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceCategory__c</fullName>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Homestore ISE</fullName>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>Sub Category</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Budget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>